--- a/htmlCssNotes.html
+++ b/htmlCssNotes.html
@@ -1,100 +1,282 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Udemig</title>
-    <link rel="stylesheet" href="style.css">x
-</head>
-<body>
-    <p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, consequuntur?
-    </p>
+    </p> -->
     <!-- block elements -->
-    <div style="border: 1px solid black;">
-        <p class="paragraf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, neque?</p>
-        <h2>Heading</h2>
+    <!-- <div style="border: 1px solid black">
+      <p class="paragraf">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, neque?
+      </p>
+      <h2>Heading</h2>
     </div>
     <h2 class="title">Başlık</h2>
     <h1>
-        Selam
-        <span>Selam span</span>
+      Selam
+      <span>Selam span</span>
     </h1>
     <div class="card">
-        <img
-            src="https://udemig.com/assets/images/Udemig.png"
-            alt="logo"
-            width="150px"
-        />
-        <h3>Uzman Eğitmenlik</h3>
-        <p>Deneyimli uzman kadromuzla becerilerinizi geliştirmek için buradayız.</p>
+      <img
+        src="https://udemig.com/assets/images/Udemig.png"
+        alt="logo"
+        width="150px"
+      />
+      <h3>Uzman Eğitmenlik</h3>
+      <p>
+        Deneyimli uzman kadromuzla becerilerinizi geliştirmek için buradayız.
+      </p>
     </div>
     <div class="card">
-        <img
-            src="https://udemig.com/assets/images/Udemig.png"
-            alt="logo"
-            width="150px"
-        />
-        <h3>Uzman Eğitmenlik</h3>
-        <p>Deneyimli uzman kadromuzla becerilerinizi geliştirmek için buradayız.</p>
+      <img
+        src="https://udemig.com/assets/images/Udemig.png"
+        alt="logo"
+        width="150px"
+      />
+      <h3>Uzman Eğitmenlik</h3>
+      <p>
+        Deneyimli uzman kadromuzla becerilerinizi geliştirmek için buradayız.
+      </p>
     </div>
     <div id="special">
-        <h3>id</h3>
-    </div>
-    <div class="backgroundDiv"></div>
+      <h3>id</h3>
+    </div> -->
+    <!-- <div class="backgroundDiv"></div>
     <span id="spanid">Span ID</span>
     <p class="text">text make it simple</p>
-    <p class="text1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, quaerat? Rem fugit illum assumenda quia aspernatur fugiat facilis repellat sunt quos atque reprehenderit alias quae sed, unde beatae exercitationem vitae asperiores laudantium architecto excepturi accusantium. Quibusdam vitae quod accusamus magnam. Nesciunt voluptatum autem qui doloremque laboriosam, maiores ipsam. Aliquam, labore.</p>
+    <p class="text1">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, quaerat?
+      Rem fugit illum assumenda quia aspernatur fugiat facilis repellat sunt
+      quos atque reprehenderit alias quae sed, unde beatae exercitationem vitae
+      asperiores laudantium architecto excepturi accusantium. Quibusdam vitae
+      quod accusamus magnam. Nesciunt voluptatum autem qui doloremque
+      laboriosam, maiores ipsam. Aliquam, labore.
+    </p>
 
     <a href="" class="udemig">Udemig</a>
     <a href="" class="google">Google</a>
-    <a href="" class="youtube">Youtube</a>
+    <a href="" class="youtube">Youtube</a> -->
 
     <!-- Sıralı liste (Ordered List)-->
-    <ol>
-        <li>Elma</li>
-        <li>Yumurta</li>
-        <li>Yumurta</li>
-        <li>Yumurta</li>
-    </ol>
+    <!-- <ol>
+      <li>Elma</li>
+      <li>Yumurta</li>
+      <li>Yumurta</li>
+      <li>Yumurta</li>
+    </ol> -->
 
     <!-- Noktalı Liste (Unordered List)-->
-    <ul>
-        <li>Yazılım</li>
-        <li>Html</li>
-        <li>Css</li>
-        <li>JavaScript</li> 
+    <!-- <ul>
+      <li>Yazılım</li>
+      <li>Html</li>
+      <li>Css</li>
+      <li>JavaScript</li>
     </ul>
     <div class="border">
-        <h2>Başlık</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi harum dolorem officia voluptates voluptatem explicabo, architecto vero blanditiis recusandae necessitatibus?</p>
+      <h2>Başlık</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi harum
+        dolorem officia voluptates voluptatem explicabo, architecto vero
+        blanditiis recusandae necessitatibus?
+      </p>
     </div>
     <h4 class="group">Selam</h4>
     <h5 class="group">Başlık</h5>
     <h6 class="group">Başlık 3</h6>
-    <p class="group">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto culpa facere corporis doloremque. Recusandae esse quidem magnam ut explicabo modi.</p>
+    <p class="group">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto culpa
+      facere corporis doloremque. Recusandae esse quidem magnam ut explicabo
+      modi.
+    </p>
     <span class="group">Lorem ipsum dolor sit amet.</span>
     <div class="kutu">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, in.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, in.</p>
+      <h2>Başlık</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+        maxime? Iusto, autem ratione adipisci natus eum nulla rerum maxime
+        nostrum.
+      </p>
+      <div class="header">
         <h2>Başlık</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, maxime? Iusto, autem ratione adipisci natus eum nulla rerum maxime nostrum.</p>
-        <div class="header">
-            <h2>Başlık</h2>
+      </div>
+      <table border="1px"> -->
+    <!-- Table Row -->
+    <!-- <tr> -->
+    <!-- Table Head -->
+    <!-- <th>Şirket</th>
+          <th>iletişim</th>
+          <th>Ülke</th>
+        </tr>
+        <tr>
+          <th>Udemig</th>
+          <th>444 444 44</th>
+          <th>İsveç</th>
+        </tr>
+      </table>
+    </div> -->
+    <!-- site içerisinde başka bir siteyi gösterme iframe ile yapılır -->
+    <!-- <iframe
+      src="https://udemig.com/"
+      frameborder="2"
+      width="500px"
+      height="300px"
+    /> -->
+    <!-- <p>Lorem <b>ipsum</b>, dolor sit amet consectetur adipisicing elit. Vero voluptatem ex iusto, corporis aut possimus illo minus harum nam quia.</p>
+    <p>
+        <div class="sticky">Sabitleme</div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae nisi ullam laboriosam, sit aut accusantium enim beatae asperiores perferendis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae nisi ullam laboriosam, sit aut accusantium enim beatae asperiores perferendis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vitae nisi ullam laboriosam, sit aut accusantium enim beatae asperiores perferendis?</p>
         </div>
-        <table border="1px">
-            <!-- Table Row -->
-            <tr>
-                <!-- Table Head -->
-                <th>Şirket</th>
-                <th>iletişim</th>
-                <th>Ülke</th>
-            </tr>
-            <tr>
-                <th>Udemig</th>
-                <th>444 444 44</th>
-                <th>İsveç</th>
-            </tr>
-        </table>
+        <h2>Position</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, eaque.</p>
+        <div class="relative">
+            position:relative
+        </div>
+    </p> -->
+    <!-- <h2>Position Absolute</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quod quibusdam deserunt eum ut cum temporibus assumenda quia odit maxime?</p>
+    <div class="relative2">
+        relative2
+        <div class="absolute">Position-Absolute</div>
+    </div> -->
+
+    <nav>
+      <a href="">Ana Sayfa</a>
+      <a href="">İletişim</a>
+      <a href="">Blog</a>
+      <a href="">Hakkımızda</a>
+    </nav>
+
+    <div class="container">
+      <div class="kutu1">kutu1</div>
+      <div class="kutu2">kutu2</div>
+      <div class="kutu3">kutu3</div>
+      <div class="kutu4">kutu4</div>
     </div>
+    <div class="inline-div">Inline-div</div>
+    <a href="" class="block-a">block-a</a>
+    <div class="container1">
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+    </div>
+    <div class="container2">
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+      <div class="kutu5">kutu1</div>
+      <div class="kutu6">kutu2</div>
+      <div class="kutu7">kutu3</div>
+      <div class="kutu8">kutu4</div>
+    </div>
+    <div class="container3">
+      <div class="boxes">
+        <div class="box1">box1</div>
+        <div class="box2">box2</div>
+        <div class="box3">box3</div>
+        <div class="box4">box4</div>
+      </div>
+    </div>
+<!-- 
+    <form>
+      <input
+        type="text"
+        placeholder="Kullanıcı Adınızı Giriniz:..."
+        value="udemig"
+      />
+      <input type="date" />
+      <input type="email" name="" id="" required />
+      <button type="submit">Gönder</button>
+      <input type="checkbox" name="" id="" />
+      <input type="radio" name="" id="" /> -->
+      <!-- <div class="emailDiv">
+        <label for="emailInput">Kullanıcı Adı</label>
+        <input
+          id="emailInput"
+          type="email"
+          placeholder="Email Adresinizi Giriniz:.."
+          required
+        />
+      </div>
+      <div class="passwordDiv">
+        <label for="passwordInput" for="">Şifrenizi Giriniz</label>
+        <input
+          type="password"
+          name=""
+          id="passwordInput"
+          placeholder="Şifrenizi Giriniz:.."
+          required
+        />
+    </div>
+    <button type="submit">Giriş Yap</button>
+    </form>
+
+    <h1>
+        <img class="index" src="https://udemig.com/assets/images/Udemig.png" width="300px" alt="">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam aperiam blanditiis repellendus atque ex necessitatibus non, architecto vel assumenda nisi?</p>
+    </h1> -->
+    <a href="https://udemig.com/">Link</a>
+    <div class="parent">
+        <p>paragraf</p>
+        <p>paragraf</p>
+        <p>paragraf</p>
+    </div>
+    <div class="secici">
+        <p>Lorem.</p>
+        <p>Lorem.</p>
+        <p>Lorem.</p>
+        <p>Lorem.</p>
+        <p>Lorem.</p>
+    </div>
+    <img src="picture1.jpeg" width="500px" class="opacity" alt="">
+    <video controls autoplay loop muted>
+        <source src="video.mp4" />
+    </video>
+    <p class="hidden">Lorem ipsum dolor sit amet.</p>
+    <select name="" id="">
+        <option>Elektronik</option>
+        <option>Mutfak</option>
+        <option>Araba</option>
+    </select>
+    <button class="disabled">Ekle</button>
 </body>
 </html>
